@@ -2,16 +2,12 @@ udebs
 debian-installer
 sources.list*
 dest
-*-stamp
 mnt
 tmp
 questions.dat
 templates.dat
 all.utf
-unifont-reduced*
-diskusage-*.txt
 extraudebs
-*.utf
 apt*
 localudebs
 debugudebs
