@@ -41,6 +41,9 @@ debian-installer (20040204) UNRELEASED; urgency=low
     - Version the mtools build-dep. Closes: #225584
     - Let HOST, BASEDIR, or DIR be set in the environment before running
       daily-build, to override the defaults.
+    - Fix up miniiso creation to fit into the new build system better.
+    - Turn on miniiso creation for netboot, so there is a
+      dest/netboot/mini.iso that behaves the same as a netboot would.
   * Richard Hirst
     - ia64: Fix cdrom to autoboot, and tidy up kernel params.  Partial
       fix for 227114.
